fix spacing and dimming of cards in sidebar

--- a/css/main.less
+++ b/css/main.less
@@ -330,13 +330,18 @@ h4 {
   flex-shrink: 0;
   width: @card-width + (2 * @card-margin);
   border-bottom-left-radius: 6px;
+  padding-bottom: 10px;
 
   background: @gray-400;
 
   .card {
     border-color: @gray-600;
+  }
 
-    &.anticipated {
+  .cards {
+    padding-bottom: 0;
+
+    &.anticipated .card {
       opacity: 0.5;
       box-shadow: none;
     }
